@@ -1,3 +1,12 @@
+2014-07-05  Eero Simoncelli  <eero@elvira.cns.nyu.edu>
+
+	* spikesort_demo/load_raw_data.m: 
+	Changed default Quiroga filtering.freq back to [], to compare with Peter's results:
+	Spike counts: [1150;1187;1135]
+	Elapsed time is 71.133004 seconds.
+	Clust Misses=256/3477 (7.36 percent) FPs=4/3225 (0.12 percent)
+	CBP Misses=13/3477 (0.37 percent) FPs=2/3466 (0.06 percent)
+
 2014-07-03  Eero Simoncelli  <eero@olympia.cns.nyu.edu>
 
 	* spikesort_demo/spikesort_demo_setup.m: 
